<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/balsamiq_sans"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/inputImage"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:background="@drawable/custom_border"
            android:padding="2dp"
            android:src="@drawable/logo3">

        </ImageView>


        <Button
            android:id="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FF0033"
            android:shadowColor="@color/teal_700"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="@string/upload_image"
            android:textAllCaps="false">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/balsamiq_sans"
            android:text="@string/wanna_enter_image_url"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/url_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/enter_image_url">

            </EditText>

            <Button
                android:id="@+id/fetch_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF0033"
                android:text="@string/fetch_image">

            </Button>


        </LinearLayout>

        <Button
            android:id="@+id/processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/process"
            android:textAllCaps="false">

        </Button>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_main_link"
            android:text="@string/hyperlink"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            />


    </LinearLayout>


</RelativeLayout>